Delete DefinitionProvider